# cli-conversor

./: Cargo.toml
src/: args.rs  conversions.rs  main.rs  output.rs
src/conversions/: general.rs  logic.rs  mod.rs  time.rs
