[package]
name = "cli-converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cv"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive"] }
owo-colors = "3.5.0"
